--- a/render.yaml
+++ b/render.yaml
@@ -10,4 +10,4 @@ services:
       - key: DATABASE_URL
         value: postgresql://granjadelcerdo_pdb_user:Kuef1xTZUY9SxoggqmFxPDXo2LLkteWF@dpg-d3pa6q1r0fns73afp7h0-a.oregon-postgres.render.com/granjadelcerdo_pdb
       - key: JWT_SECRET
-        value: "cambia_estosecreto"
+        value: "mysecret123"
