Refactor render.yaml to streamline build command and update JWT_SECRET for enhanced security

--- a/render.yaml
+++ b/render.yaml
@@ -2,15 +2,12 @@ services:
   - type: web
     name: granja-del-cerdo-api
     env: python
-    plan: free
-    buildCommand: |
-      apt-get update && apt-get install -y nodejs npm
-      npm install -g prisma
-      pip install -r requirements.txt
-      prisma generate
+    rootDir: api
+    buildCommand: "pip install -r requirements.txt && python -m prisma generate"
     startCommand: "python app.py"
+    plan: free
     envVars:
       - key: DATABASE_URL
         value: postgresql://granjadelcerdo_pdb_user:Kuef1xTZUY9SxoggqmFxPDXo2LLkteWF@dpg-d3pa6q1r0fns73afp7h0-a.oregon-postgres.render.com/granjadelcerdo_pdb
       - key: JWT_SECRET
-        value: "cambia_estosecreto"
+        value: "mysecret123"
