--- a/.env
+++ b/.env
@@ -3,4 +3,5 @@ API_PORT=8000
 UI_PORT=8501
 API_BASE_URL=http://localhost:8000
 MODEL_PATH=ml/model_store/latest.pkl
+DEFAULT_MARGIN_RATE=0.10
 DATABASE_URL="postgresql://granjadelcerdo_pdb_user:Kuef1xTZUY9SxoggqmFxPDXo2LLkteWF@dpg-d3pa6q1r0fns73afp7h0-a.oregon-postgres.render.com/granjadelcerdo_pdb"
