refactor: enhance Prisma client generation logic, improve error handling, and update UI components for responsive design

--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -10,8 +10,8 @@ psycopg[binary]
 structlog
 pydantic-settings
 passlib[bcrypt]
-PyJWT
-pydantic-settings
 prisma
 pandas  
 numpy
+joblib
+scikit-learn
