chore: update DATABASE_URL in .env and config.py, remove outdated .env.example file

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ UI_PORT=8501
 API_BASE_URL=http://localhost:8000
 MODEL_PATH=ml/model_store/latest.pkl
 DEFAULT_MARGIN_RATE=0.10
-DATABASE_URL="postgresql://granjadelcerdo_pdb_user:Kuef1xTZUY9SxoggqmFxPDXo2LLkteWF@dpg-d3pa6q1r0fns73afp7h0-a.oregon-postgres.render.com/granjadelcerdo_pdb"
+DATABASE_URL="postgresql://granjacerdo_pdb_user:fkVQaTQeeg5KvgdkM0WKdaw9njrNCo8y@dpg-d4d3dammcj7s73cj6rs0-a.oregon-postgres.render.com/granjacerdo_pdb"
