--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ UI_PORT=8501
 API_BASE_URL=http://localhost:8000
 MODEL_PATH=ml/model_store/latest.pkl
 DEFAULT_MARGIN_RATE=0.10
-DATABASE_URL="postgresql://granjacerdo_pdb_user:fkVQaTQeeg5KvgdkM0WKdaw9njrNCo8y@dpg-d4d3dammcj7s73cj6rs0-a.oregon-postgres.render.com/granjacerdo_pdb"
+DATABASE_URL="postgresql://granjacerdo_pdb_b59s_user:tUnaif6hHgBkV5orjPqThJifDDA8FVaR@dpg-d5mi4463jp1c73a4v6q0-a/granjacerdo_pdb_b59s"
