--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 API_HOST=0.0.0.0
 API_PORT=8000
 UI_PORT=8501
-API_BASE_URL=http://localhost:8000
+API_BASE_URL=https://granja-del-cerdo-api-1.onrender.com
 MODEL_PATH=ml/model_store/latest.pkl
 DEFAULT_MARGIN_RATE=0.10
 DATABASE_URL="postgresql://granjacerdo_pdb_b59s_user:tUnaif6hHgBkV5orjPqThJifDDA8FVaR@dpg-d5mi4463jp1c73a4v6q0-a/granjacerdo_pdb_b59s"
